grammar.js
    source_file: ($) =>
      seq(
        optional($.script_tag),
        optional($.library_name),
        repeat($.import_or_export),
        repeat($.part_directive),
        repeat($.part_of_directive),
        repeat($._top_level_definition),
      ),

    _top_level_definition: ($) =>
      choice(
        $._declaration,
        seq(optional($._metadata), optional("augment"), $.function_signature, $.function_body),
        seq(optional($._metadata), optional("augment"), $.getter_signature, $.function_body),
        seq(optional($._metadata), optional("augment"), $.setter_signature, $.function_body),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.function_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.getter_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("external"),
          $.setter_signature,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          choice("final", "const"),
          optional($._type),
          $.static_final_declaration_list,
          ";",
        ),
        seq(optional($._metadata), optional("augment"), "late", "final", optional($._type), $.initialized_identifier_list, ";"),
        seq(
          optional($._metadata),
          optional("augment"),
          optional("late"),
          $._var_or_type,
          $.initialized_identifier_list,
          ";",
        ),
        seq(
          optional($._metadata),
          optional("augment"),
          "external",
          optional("final"),
          optional($._type),
          $.identifier_list,
          ";",
        ),
      ),

    // ========================================================================
    // Library structure (Phase 9)
    // ========================================================================

    library_name: ($) =>
      choice(
        seq(
          optional($._metadata),
          "library",
          optional($.dotted_identifier_list),
          ";",
        ),
        seq(
          optional($._metadata),
          "library",
          "augment",
          field("uri", $.uri),
          ";",
        ),
      ),

    import_or_export: ($) =>
      prec(PREC.TYPE_IDENTIFIER, choice($.library_import, $.library_export)),

    library_import: ($) => seq(optional($._metadata), $.import_specification),

    import_specification: ($) =>
      choice(
        seq(
          "import",
          field("uri", $.configurable_uri),
          optional(seq(optional("deferred"), "as", field("alias", $.identifier))),
          repeat($.combinator),
          ";",
        ),
        prec(1, seq(
          "import",
          field("uri", $.uri),
          "deferred",
          "as",
          field("alias", $.identifier),
          repeat($.combinator),
          ";",
        )),
      ),

    library_export: ($) =>
      seq(
        optional($._metadata),
        "export",
        field("uri", $.configurable_uri),
        repeat($.combinator),
        ";",
      ),

    part_directive: ($) =>
      seq(optional($._metadata), "part", field("uri", $.uri), ";"),

    uri: ($) => $.string_literal,

    configurable_uri: ($) => seq($.uri, repeat($.configuration_uri)),

    combinator: ($) =>
      choice(
        seq("show", commaSep1($.identifier)),
        seq("hide", commaSep1($.identifier)),
      ),

    dotted_identifier_list: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    // ========================================================================
    // Metadata / Annotations (Phase 9)
    // ========================================================================

    _metadata: ($) => repeat1($._annotation),

    annotation_arguments: ($) =>
      seq($.annotation_open_paren, optional($._argument_list), ")"),

    _type: ($) =>
      choice(
        seq($.function_type, optional("?")),
        $._type_not_function,
      ),

    _type_not_void: ($) =>
      choice(
        seq($.function_type, optional("?")),
        seq($.record_type, optional("?")),
        $._type_not_void_not_function,
      ),

    _type_name: ($) =>
      seq(
        alias($.identifier, $.type_identifier),
        optional(
          prec.right(PREC.TYPE_IDENTIFIER, seq(".", alias($.identifier, $.type_identifier))),
        ),
      ),

    void_type: (_) => "void",

    type_arguments: ($) =>
      seq("<", commaSep1($._type), ">"),

    type_parameters: ($) =>
      seq("<", commaSep1($.type_parameter), ">"),

    type_parameter: ($) =>
      seq(
        optional($._metadata),
        optional(field("variance", $.variance_modifier)),
        field("name", alias($.identifier, $.type_identifier)),
        optional(seq("extends", field("bound", $._type_not_void))),
      ),

    variance_modifier: (_) => choice("in", "out", "inout"),

    record_type: ($) =>
      choice(
        seq("(", ")"),
        seq(
          "(",
          commaSep1($.record_type_field),
          ",",
          "{",
          commaSep1TrailingComma($.record_type_named_field),
          "}",
          ")",
        ),
        seq("(", commaSep1TrailingComma($.record_type_field), ")"),
        seq(
          "(",
          "{",
          commaSep1TrailingComma($.record_type_named_field),
          "}",
          ")",
        ),
      ),

    record_type_field: ($) =>
      seq(optional($._metadata), field("type", $._type), optional(field("name", $.identifier))),

    null_literal: (_) => "null",

    true: (_) => "true",
    decimal_integer_literal: (_) =>
      token(sep1(/[0-9]+/, /_+/)),

    decimal_floating_point_literal: (_) =>
      token(
        choice(
          seq(
            sep1(/[0-9]+/, /_+/),
            ".",
            sep1(/[0-9]+/, /_+/),
            optional(seq(/[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/))),
          ),
          seq(
            ".",
            sep1(/[0-9]+/, /_+/),
            optional(seq(/[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/))),
          ),
          seq(sep1(/[0-9]+/, /_+/), /[eE]/, optional(choice("-", "+")), sep1(/[0-9]+/, /_+/)),
        ),
      ),

    // --- Strings ---

    string_literal: ($) =>
      repeat1(
        choice(
          $.string_literal_double_quotes,
          $.string_literal_single_quotes,
          $.string_literal_double_quotes_multiple,
          $.string_literal_single_quotes_multiple,
          $.raw_string_literal_double_quotes,
          $.raw_string_literal_single_quotes,
          $.raw_string_literal_double_quotes_multiple,
          $.raw_string_literal_single_quotes_multiple,
        ),
      ),

    string_literal_single_quotes: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $.template_chars_single_single,
            '"',
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        "'",
      ),

    template_substitution: ($) =>
      seq(
        "$",
        choice(
          seq("{", $._expression, "}"),
          $.identifier_dollar_escaped,
        ),
      ),

    _sub_string_test: (_) => seq("$", /[^a-zA-Z_{]/),

    identifier_dollar_escaped: (_) => /([a-zA-Z_]|(\\\$))([\w]|(\\\$))*/,

    record_literal: ($) =>
      seq(optional("const"), $._record_literal_no_const),

    _record_literal_no_const: ($) =>
      choice(
        seq("(", ")"),
        seq(
          "(",
          choice(
            seq($.label, $._expression, optional(",")),
            seq($._expression, ","),
            seq($.record_field, repeat1(seq(",", $.record_field)), optional(",")),
          ),
          ")",
        ),
      ),

    record_field: ($) => seq(optional($.label), $._expression),

    // ========================================================================
    // Expressions (Phase 4)
    // ========================================================================

    _expression: ($) =>
      choice(
        $.pattern_assignment,
        $.assignment_expression,
        $.throw_expression,
        seq($._real_expression, repeat($.cascade_section)),
      ),

    _expression_without_cascade: ($) =>
      choice(
        $.assignment_expression,
        $._real_expression,
        $.throw_expression,
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $.assignable_expression),
          field("operator", $._assignment_operator),
          field("right", $._expression),
        ),
      ),

    _assignment_operator: (_) =>
      choice(
        "=", "+=", "-=", "*=", "/=", "%=", "~/=",
        "<<=", ">>=", ">>>=", "&=", "^=", "|=", "??=",
      ),

    assignable_expression: ($) =>
      choice(
        seq($._primary, $._assignable_selector_part),
        seq("super", $.unconditional_assignable_selector),
        seq($.constructor_invocation, $._assignable_selector_part),
        prec.dynamic(1, $.identifier),
      ),

    _assignable_selector_part: ($) =>
      seq(repeat($.selector), $._assignable_selector),

    // --- Conditional ---

    cascade_section: ($) =>
      prec.left(
        PREC.CASCADE,
        seq(
          choice("..", "?.."),
          $.cascade_selector,
          repeat($.selector),
          optional(seq($._assignment_operator, $._expression_without_cascade)),
        ),
      ),

    cascade_selector: ($) =>
      choice(
        seq(optional("?"), "[", $._expression, "]"),
        $.identifier,
      ),

    // --- Primary expressions ---

    _primary: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.function_expression,
        $.new_expression,
        $.const_object_expression,
        $.parenthesized_expression,
        "this",
        seq("super", choice($.unconditional_assignable_selector, $.argument_part)),
        $.constructor_invocation,
        $.constructor_tearoff,
        $.switch_expression,
        $.static_member_shorthand,
      ),

    arguments: ($) => seq("(", optional($._argument_list), ")"),

    _argument_list: ($) => prec.right(commaSep1TrailingComma($.argument)),

    named_argument: ($) => seq($.label, $._expression),

    // ========================================================================
    // Formal Parameters (Phase 5)
    // ========================================================================

    _formal_parameter_part: ($) =>
      seq(optional($.type_parameters), $.formal_parameter_list),

    formal_parameter_list: ($) =>
      choice(
        seq("(", ")"),
        seq("(", $._normal_formal_parameters, optional(","), ")"),
        seq(
          "(",
          $._normal_formal_parameters,
          ",",
          $.optional_formal_parameters,
          ")",
        ),
        seq("(", $.optional_formal_parameters, ")"),
      ),

    _normal_formal_parameters: ($) => commaSep1($.formal_parameter),

    formal_parameter: ($) => $._normal_formal_parameter,

    _normal_formal_parameter: ($) =>
      seq(
        optional($._metadata),
        choice(
          $._function_formal_parameter,
          $._simple_formal_parameter,
          $.constructor_param,
          $.super_formal_parameter,
        ),
      ),

    _declared_identifier: ($) =>
      seq(
        optional("covariant"),
        $._final_const_var_or_type,
        field("name", $.identifier),
      ),

    constructor_param: ($) =>
      seq(
        optional($._final_const_var_or_type),
        "this",
        ".",
        $.identifier,
        optional($._formal_parameter_part),
      ),

    _statement: ($) =>
      choice(
        $.block,
        prec.dynamic(1, $.local_function_declaration),
        prec.dynamic(2, $.local_variable_declaration),
        $.for_statement,
        $.while_statement,
        $.do_statement,
        $.switch_statement,
        $.if_statement,
        $.try_statement,
        $.break_statement,
        $.continue_statement,
        $.rethrow_statement,
        $.return_statement,
        $.yield_statement,
        $.yield_each_statement,
        $.expression_statement,
        $.assert_statement,
        $.labeled_statement,
        $.empty_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    expression_statement: ($) => seq($._expression, ";"),

    local_variable_declaration: ($) =>
      choice(
        seq(
          optional($._metadata),
          $.initialized_variable_definition,
          ";",
        ),
        seq(
          optional($._metadata),
          $.pattern_variable_declaration,
          ";",
        ),
      ),

    initialized_variable_definition: ($) =>
      seq(
        $._declared_identifier,
        optional(seq("=", field("value", $._expression))),
        repeat(seq(",", $.initialized_identifier)),
      ),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    function_signature: ($) =>
      seq(
        optional(field("return_type", $._type)),
        field("name", $._function_name),
        field("parameters", $._formal_parameter_part),
      ),

    // All built-in identifiers can be used as function/method names
    _function_name: ($) => $.identifier,

    getter_signature: ($) =>
      seq(optional(field("return_type", $._type)), "get", field("name", $.identifier)),

    function_body: ($) =>
      choice(
        seq(optional("async"), "=>", $._expression, ";"),
        seq(optional(choice("async", "async*", "sync*")), $.block),
        $.native,
      ),

    native: ($) => seq("native", optional($.string_literal), ";"),

    // ========================================================================
    // Declarations and class members (Phase 7)
    // ========================================================================

    _final_const_var_or_type: ($) =>
      choice(
        seq(optional("late"), "final", optional($._type)),
        seq("const", optional($._type)),
        seq(optional("late"), $._var_or_type),
      ),

    _var_or_type: ($) =>
      choice($._type, seq("var", optional($._type))),

    method_signature: ($) =>
      choice(
        seq($.constructor_signature, optional($.initializers)),
        $.factory_constructor_signature,
        seq(optional("static"), choice($.function_signature, $.getter_signature, $.setter_signature)),
        $.operator_signature,
      ),

    external: (_) => "external",

    _external_and_static: ($) => seq($.external, optional("static")),

    // --- Constructors ---

    constructor_signature: ($) =>
      seq(
        field("name", seq($.identifier, optional(seq(".", $._identifier_or_new)))),
        field("parameters", $.formal_parameter_list),
      ),

    constant_constructor_signature: ($) =>
      seq(
        "const",
        field("name", seq($.identifier, optional(seq(".", $._identifier_or_new)))),
        field("parameters", $.formal_parameter_list),
      ),

    initializers: ($) => seq(":", commaSep1($.initializer_list_entry)),

    initializer_list_entry: ($) =>
      choice(
        seq("super", $.arguments),
        seq("super", ".", choice($.identifier, "new"), $.arguments),
        $.field_initializer,
        $.assertion,
      ),

    field_initializer: ($) =>
      seq(
        optional(seq("this", ".")),
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),

    // --- Operators ---

    static_final_declaration_list: ($) =>
      commaSep1($.static_final_declaration),

    static_final_declaration: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expression)),

    initialized_identifier_list: ($) =>
      commaSep1($.initialized_identifier),

    initialized_identifier: ($) =>
      seq(field("name", $.identifier), optional(seq("=", field("value", $._expression)))),
