test/corpus/comments.txt
================================================================================
Single-line comment
================================================================================

// this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Single-line doc comment
================================================================================

/// this is a doc comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Block comment
================================================================================

/* block comment */

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment)))

================================================================================
Documentation block comment
================================================================================

/** doc block comment */

--------------------------------------------------------------------------------

(source_file
  (comment
    (documentation_block_comment)))

================================================================================
Nested block comment
================================================================================

/* outer /* inner */ outer */

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment)))

================================================================================
Empty source file
================================================================================

--------------------------------------------------------------------------------

(source_file)
